bk_ida/gccida/c0/yyerror
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/yyerror/src/c-parse.c:5298:7: error: use of undeclared identifier 'arg0'
v1 = &arg0; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/yyerror/src/c-parse.c:5299:23: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( val <= 0xFF && ( sch_istable[( unsigned __int8)val] & 0xAC) != 0 ) 
                      ^~~~~~~~~~~
                      _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/yyerror/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/yyerror/src/obj/c-parse.o] Error 1
